--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.4.0",
-    "babel-plugin-uglify": "^1.0.2"
+    "babel-plugin-uglify": "^1.0.2",
+    "uglifyjs": "^2.4.10"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
